--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Blog Curso Git</h1>
     </div>
     <div>
-        Aqui ira el contenido del blog
+        El contenido del blog ira Aqui
     </div>
 </body>
 </html>
